--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile files('libs/json-lib-2.4-jdk15.jar')
+    compile files('libs/gson-2.2.4.jar')
 }
